[gd_scene load_steps=8 format=3 uid="uid://pjqell4iy5hc"]

[ext_resource type="Script" uid="uid://devadgr2ibts2" path="res://Scenes/start_menu.gd" id="1_1wmxr"]
[ext_resource type="FontFile" uid="uid://jijl7mh2tfw3" path="res://Fonts/DigitalDisco.ttf" id="1_vset1"]
[ext_resource type="StyleBox" uid="uid://drhu1yrvc77jf" path="res://Resources/Button.tres" id="3_t7rl6"]
[ext_resource type="Texture2D" uid="uid://dnmel4v4cov0r" path="res://Sprites/environment/Bedroom/TopDownHouse_FloorsAndWalls.png" id="3_u88ce"]
[ext_resource type="Theme" uid="uid://cojrl4cralg3e" path="res://Resources/theme.tres" id="6_5hugr"]
[ext_resource type="FontFile" uid="uid://bka5fpx4ym5ao" path="res://Fonts/DigitalDisco-Thin.ttf" id="6_7k6f1"]
[ext_resource type="PackedScene" uid="uid://cw37p0gbimh0a" path="res://Prefabs/player.tscn" id="7_5hugr"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 1.877
anchor_right = 4.349
anchor_bottom = 6.282
offset_left = 13.0
offset_top = -190.074
offset_right = -749.512
offset_bottom = -486.684
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4.45491, 4.2839)
script = ExtResource("1_1wmxr")

[node name="TopDownHouseFloorsAndWalls" type="Sprite2D" parent="."]
position = Vector2(681.338, 188.861)
scale = Vector2(5.17596, 3.17863)
texture = ExtResource("3_u88ce")

[node name="Player" parent="." instance=ExtResource("7_5hugr")]
position = Vector2(153, 210)
scale = Vector2(3.5919, 3.34832)

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 26.0387
offset_top = 70.73
offset_right = 233.039
offset_bottom = 97.73
scale = Vector2(1.19955, 1.16918)
theme = ExtResource("6_5hugr")
theme_override_fonts/normal_font = ExtResource("6_7k6f1")
theme_override_font_sizes/normal_font_size = 16
text = "Five More Minutes..."
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -123.37
offset_top = -89.5698
offset_right = 6.62964
offset_bottom = -3.56976
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.775288, 0.926547)
theme_override_constants/separation = 2

[node name="Wake up Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_vset1")
theme_override_styles/normal = ExtResource("3_t7rl6")
text = "Wake up"

[node name="Options Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_vset1")
theme_override_styles/normal = ExtResource("3_t7rl6")
text = "Options
"

[node name="Credits Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_vset1")
theme_override_styles/normal = ExtResource("3_t7rl6")
text = "Credits
"

[node name="Quit Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_vset1")
theme_override_styles/normal = ExtResource("3_t7rl6")
text = "Quit
"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(163.864, 152.665)
scale = Vector2(-44.3243, -5.45491)
zoom = Vector2(0.2, 0.2)

[connection signal="pressed" from="VBoxContainer/Wake up Button" to="." method="_on_wake_up_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits Button" to="." method="_on_meet_the_devs_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
